--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^1.1.4
   firebase_messaging: ^9.1.4
+  firebase_core: ^1.1.1
 
 dev_dependencies:
   flutter_test:
